ditto prediction and python linkage toolkit

--- a/data/data_analysis.ipynb
+++ b/data/data_analysis.ipynb
@@ -375,8 +375,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-19T11:59:54.980814Z",
-     "start_time": "2025-02-19T11:59:54.976855Z"
+     "end_time": "2025-02-19T15:01:39.411574Z",
+     "start_time": "2025-02-19T15:01:39.406537Z"
     }
    },
    "cell_type": "code",
@@ -384,7 +384,7 @@
     "import json\n",
     "import jsonlines\n",
     "\n",
-    "input_file = 'record_linkage/ditto/train/ditto_input.jsonl'\n",
+    "input_file = '../ditto-master/data/input/ditto_input.jsonl'\n",
     "output_file = '../ditto-master/data/input/ditto_input.jsonl'\n",
     "\n",
     "def format_record(record):\n",
@@ -405,31 +405,7 @@
    ],
    "id": "101c088fb66b80f2",
    "outputs": [],
-   "execution_count": 6
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "import csv\n",
-    "\n",
-    "input_filename = 'tuo_file.txt'   # Sostituisci con il nome del tuo file di input\n",
-    "output_filename = 'output.csv'      # Il nome del file CSV in output\n",
-    "\n",
-    "with open(input_filename, 'r', encoding='utf-8') as infile, \\\n",
-    "     open(output_filename, 'w', newline='', encoding='utf-8') as outfile:\n",
-    "    csv_writer = csv.writer(outfile)\n",
-    "    # Scrivi l'intestazione, se necessario\n",
-    "    csv_writer.writerow(['left', 'right', 'label', 'score'])\n",
-    "\n",
-    "    for line in infile:\n",
-    "        # Rimuove eventuali spazi o newline e divide la riga sui tab\n",
-    "        row = line.strip().split('\\t')\n",
-    "        csv_writer.writerow(row)\n"
-   ],
-   "id": "99871df3a6f7f441"
+   "execution_count": 5
   }
  ],
  "metadata": {
